# columbus

./: .claudeignore  .env.docker  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  Dockerfile  EDGE_FUNCTIONS_GUIDE.md  ENVIRONMENT_SETUP.md  ENV_SETUP_GUIDE.md  FINAL_SETUP_GUIDE.md  GOOGLE_OAUTH_SETUP.md  PLAN_PRODUCTS_ARCHITECTURE.md  PLAN_TAURI_APP.md  PROJECT_OVERVIEW.md  QUICK_START.md  RAILWAY_SETUP.md  README.md  SETUP_CHECKLIST.md  START_HERE.md  docker-compose.yml  package-lock.json  package.json  railway.json  railway.toml
desktop-app/: package-lock.json  package.json  vite.config.js
desktop-app/src/: index.html  main.js  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: autoscan.rs  lib.rs  main.rs  proxy_server.rs  storage.rs
desktop-app/src-tauri/src/commands/: api.rs  auth.rs  autologin.rs  bulk_auth.rs  credentials.rs  mod.rs  platform.rs  proxy.rs  scan.rs  settings.rs
desktop-app/src-tauri/src/webview/: autologin.rs  manager.rs  mod.rs
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content-scripts/: chatgpt.js  claude.js  gemini.js  perplexity.js
extension/lib/: api-client.js  config.js  storage.js
extension/popup/: popup.css  popup.html  popup.js
frontend/: .env.example  .gitignore  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/components/: ActiveJobsBadge.vue  CookieBanner.vue  DashboardNav.vue  (+8 more)
sdk/: README.md  columbus-tracker.test.ts  columbus-tracker.ts  package-lock.json  package.json
supabase/: config.toml
worker/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  railway.toml  tsconfig.json  vitest.config.ts
workers/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+243 files in other folders)
